Bug 480160 - "Import Page" doesn't import widgets.
Summary: "Import Page" doesn't import widgets.
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.27.10
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-22 11:12 UTC by Stanislav Chernichkin
Modified: 2024-02-02 14:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Chernichkin 2024-01-22 11:12:51 UTC
SUMMARY
***
"Import Page" doesn't import widgets added in system monitor UI.
***

STEPS TO REPRODUCE
1. Create new page in System Monitor.
2. Add some widgets.
3. Press "Save Changes" and then "Export Current Page".
4. Press "Import Page" and select page you have exported.

OBSERVED RESULT
Page loaded, but semi-empty, no widgets, just empty panes.

EXPECTED RESULT
Page should include all controls added to it before export.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 6.7.0.0-MANJARO
(available in About System)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.12

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-02-01 14:30:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/250
Comment 2 Arjen Hiemstra 2024-02-02 12:07:28 UTC
Git commit dc97c9719ccfeffbbfb6a8177ef7a0135361137f by Arjen Hiemstra.
Committed on 02/02/2024 at 12:01.
Pushed by ahiemstra into branch 'master'.

Make face cache entries unique per-page

Otherwise we risk pages ending up with empty sections because the
face is in another page.

M  +5    -3    src/page/FaceLoader.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/-/commit/dc97c9719ccfeffbbfb6a8177ef7a0135361137f
Comment 3 Arjen Hiemstra 2024-02-02 12:09:28 UTC
Git commit dec9fb3a5582c70a361dbb8c6156f58d6debfefb by Arjen Hiemstra.
Committed on 02/02/2024 at 12:08.
Pushed by ahiemstra into branch 'Plasma/6.0'.

Make face cache entries unique per-page

Otherwise we risk pages ending up with empty sections because the
face is in another page.


(cherry picked from commit dc97c9719ccfeffbbfb6a8177ef7a0135361137f)

M  +5    -3    src/page/FaceLoader.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/-/commit/dec9fb3a5582c70a361dbb8c6156f58d6debfefb