Make face cache entries unique per-page

Otherwise we risk pages ending up with empty sections because the
face is in another page.

BUG: 480160